- Added generic version of problem 62.